<resources>
    <string name="app_name">EcoClan</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="ecoclan">ecoclan</string>
    <string name="todo">TODO</string>
    <string name="employee_panel">- - Employee Panel - -</string>
    <string name="or">-------------------------------- OR --------------------------------</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="register_heading">Register to EcoClan!</string>
    <string name="postal_address">Postal Address</string>
    <string name="contact_no">Contact No.</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_home">Map</string>
    <string name="title_activity_resource_detail">ResourceDetailActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //materials
    <string name="material_cloth">Cloth</string>
    <string name="material_Paper">Paper</string>
    <string name="material_Plastic">Plastic</string>
    <string name="material_Metal">Metal</string>
    <string name="material_Glass">Glass</string>

    //activity title
    <string name="activity_t_ecocal">ecoCal</string>
    <string name="activity_t_editinfo">Edit Info!</string>
    <string name="activity_t_guide">Guide</string>
    <string name="activity_t_login">Welcome to ecoClan!</string>
    <string name="activity_t_Signup">Sign Up!</string>

    //button
    <string name="btn_calculate">Calculate</string>
    <string name="btn_edit_profile">edit profile</string>
    <string name="btn_Logout">Logout</string>
    <string name="btn_delete_acc">Delete Account</string>
    <string name="btn_update">Update</string>
    <string name="btn_register">Register</string>
    <string name="btn_signup">Sign UP</string>

    //navBar
    <string name="navBar_guide">Guide</string>
    <string name="navBar_ecocal">ecoCal</string>
    <string name="navBar_profile">Profile</string>

    //lable
    <string name="Lable_total">Total (Rs.)</string>
    <string name="Lable_ecocal">calculate your payment.</string>
    <string name="Lable_email">Email:</string>
    <string name="Lable_phone">Phone:</string>
    <string name="Lable_address">Address:</string>
    <string name="Lable_requestpickup">REQUEST PICKUP</string>
    <string name="Lable_editinfo">This is,</string>
    <string name="Lable_editinfo_updateinfo">Update your user information here.</string>
    <string name="Lable_editinfo_deleteacc">Delete your account.</string>
    <string name="Lable_guide">How to arrange your waste materials.</string>
    <string name="Lable_login_member">ecoClan Member Login!</string>
    <string name="Lable_login_register">New Here? Create Account</string>
    <string name="Lable_login_forgotPassword">Forgot Password?</string>
    <string name="Lable_login_employee">Employee login -></string>
    <string name="Lable_reg">Hello,</string>
    <string name="Lablereg_member">Member.</string>
    <string name="Lablereg_red_login">Alredy Registered? Login Here</string>
    <string name="title_activity_user_map">Map</string>
    <string name="Lable_title_map_">Enter Meterial details here.</string>

    //it19071480

    <string name="requestBtn">(Request)</string>
    <string name="receiveBtn">(Receive)</string>
    <string name="searchBtn">(Search)</string>
    <string name="profileBtn">(Profile)</string>

    <string name="signOut">Sign Out</string>

    <string name="request">Request Materials</string>
    <string name="receive">Received Materials Information</string>
    <string name="materials">Materials Information</string>
    <string name="profile">Owner Information</string>
    <string name="registerCompany">Register Company</string>
    <string name="updateUser">Update User Information</string>

    <string name="send">Send Request</string>
    <string name="confirmAdd">Confirm Address</string>
    <string name="pay">Make Payment</string>
    <string name="confirm">Confirm</string>
    <string name="requested">Requested</string>
    <string name="received">Received</string>
    <string name="mapAdd">Map Address</string>
    <string name="updateInfo">Update Information</string>
    <string name="save">Save</string>
    <string name="deleteAcc">Delete Account</string>
    <string name="registerComp">Register Company</string>
    <string name="pickDate">Pick Date</string>
    <string name="pickTime">Pick Time</string>

    <string name="category">Choose Category :</string>
    <string name="weight">Weight (in Kg) :</string>
    <string name="expectDate">Expected Date :</string>
    <string name="expectTime">Expected Time :</string>
    <string name="total">Total Amount :</string>
    <string name="amount">Amount :</string>
    <string name="name">Name :</string>
    <string name="firstName">First Name :</string>
    <string name="lastName">Last Name :</string>
    <string name="email">Email Address : </string>
    <string name="postal">Postal Address : </string>
    <string name="cityD">City :</string>
    <string name="passwordD">Password :</string>
    <string name="contact">Contact Number :</string>
    <string name="companyName">Company Name :</string>
    <string name="companyAddress">Company Address :</string>
    <string name="registrationNumber">Registration Number :</string>

    <string-array name="types">
        <item>Cloth</item>
        <item>Glass</item>
        <item>Metal</item>
        <item>Plastic</item>
        <item>Paper</item>
    </string-array>


    //IT18211924
    <string name="verify_acc">Verify an Account</string>

    <string name="Recycle_page">Recycle Company</string>
    <string name="Customer">Customers</string>

    <string name="popup_view">Recycle Company  has requested for the Registration.</string>
    <string name="popup_request">Recycle Company has requested for changing details.</string>

    <string name="dashboard">Dashboard</string>
    <string name="verificataion">Verify an account</string>
    <string name="collector">collector</string>
    <string name="recycle">recycle </string>
    <string name="Request">Requests from recycle company</string>
    <string name="person">Customer</string>
    <string name="history">View History</string>


</resources>


